# k-NN

./: .codecov.yml  .gitignore  .gitmodules  ADMINS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GRADLE_GRAPH.md  IteratorCostAccuracyResults.md  MAINTAINERS.md  NOTICE.txt  README.md  RELEASING.md  RFC.md  THIRD-PARTY  TRIAGING.md  build.gradle  demo.sh  gradle.properties  gradlew  gradlew.bat  hey.txt  integtest.sh  output-of-_settings-knn-index.txt  output-of-_settings-normal-index.txt  settings.gradle
jni/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  CTestCustom.cmake  Makefile  cmake_install.cmake
jni/cmake/: init-faiss.cmake  init-faiss.cmake-e  init-nmslib.cmake  init-simd.cmake  macros.cmake
jni/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
jni/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
jni/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
jni/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
jni/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
jni/include/: FaissIndexBQ.h  commons.h  faiss_index_bq.h  faiss_index_service.h  faiss_methods.h  faiss_stream_support.h  faiss_util.h  faiss_wrapper.h  jni_util.h  memory_util.h  native_engines_stream_support.h  nmslib_stream_support.h  nmslib_wrapper.h  org_opensearch_knn_index_JNIService.h  org_opensearch_knn_index_v2011_KNNIndex.h  org_opensearch_knn_jni_FaissService.h  org_opensearch_knn_jni_JNICommons.h  org_opensearch_knn_jni_NmslibService.h  org_opensearch_knn_jni_SIMDDecoding.h  org_opensearch_knn_jni_SIMDEncoding.h  org_opensearch_knn_jni_SIMDNativeLibraryLoader.h  org_opensearch_knn_jni_SimdFp16.h  org_opensearch_knn_jni_SimdVectorComputeService.h  parameter_utils.h  platform_defs.h  simd_fp16.h
jni/include/bbq/: faiss_bbq_flat.h  faiss_bbq_hnsw.h
jni/include/decoding/: arm_decoding.h  decoding.h  default_decoding.h  x86_decoding.h
jni/include/encoding/: arm_encoding.h  default_encoding.h  encoding.h  x86_encoding.h
jni/include/knn_extension/faiss/: MultiVectorResultCollector.h  MultiVectorResultCollectorFactory.h
jni/include/simd/similarity_function/: similarity_function.h
jni/include/sq/: faiss_sq_flat.h  faiss_sq_hnsw.h
jni/patches/faiss/: 0001-Add-missing-headers-for-gcc.patch  0001-Custom-patch-to-support-multi-vector.patch  0002-Custom-patch-to-support-AVX2-Linux-CI.patch  0002-Custom-patch-to-support-sqfp16-neon.patch  0002-Enable-precomp-table-to-be-shared-ivfpq.patch  0003-Custom-patch-to-support-range-search-params.patch  0004-Custom-patch-to-support-binary-vector.patch  0005-Custom-patch-to-support-multi-vector-IndexHNSW-search_level_0.patch  0006-Add-nested-search-support-for-IndexBinaryHNSWCagra.patch  0006-Custom-patch-to-support-dedup-flatvector-faiss-file.patch  0007-Custom-patch-to-support-dedup-flatvector-faiss-file.patch  0007-Modify-minor-Faiss-structures-to-support-Faiss-SQ.patch  0008-Added-skipping-flat-storage-availability-in-write_in.patch  0009-Fixing-radial-search-for-IndexHNSWCagra.patch  0010-Make-selective-FAISS_THROW_IF_NOT-d-8-0-in-IndexBina.patch
jni/patches/nmslib/: 0001-Initialize-maxlevel-during-add-from-enterpoint-level.patch  0002-Adds-ability-to-pass-ef-parameter-in-the-query-for-h.patch  0003-Added-streaming-apis-for-vector-index-loading-in-Hnsw.patch  0003-Adding-two-apis-using-stream-to-load-save-in-Hnsw.patch  0004-Added-a-new-save-apis-in-Hnsw-with-streaming-interfa.patch  0005-Add-util-include-to-fix-pragma-error.patch  0006-Add-AppleClang-in-NMSLIB-build-and-logging-invalid-compiler.patch  0006-Added-AppleClang-and-logging-invalid-compiler.patch  0006-Added-NMSLIB_SIMD_FLAGS-also-introduces-AppleClang-in-CMake.patch  0006-Bump-cmake-version-nmslib.patch  0007-Bump-up-CMake-version.patch
jni/sandbox/: svs.cmake  tenants.cmake
jni/sandbox/cmake/: SandboxTenant.cmake  fetch-svs-runtime.cmake  init-faiss-svs.cmake  svs_jni.version
jni/sandbox/include/: org_opensearch_knn_sandbox_svs_SvsService.h  svs_constants.h  svs_wrapper.h
jni/sandbox/src/: org_opensearch_knn_sandbox_svs_SvsService.cpp  svs_constants.cpp  svs_wrapper.cpp
jni/src/: arm_simd_fp16.cpp  com_amazon_opendistroforelasticsearch_knn_index_v2011_KNNIndex.cpp  commons.cpp  default_simd_fp16.cpp  faiss_index_service.cpp  faiss_methods.cpp  faiss_util.cpp  faiss_wrapper.cpp  jni_util.cpp  nmslib_wrapper.cpp  org_opensearch_knn_index_JNIService.cpp  org_opensearch_knn_index_v2011_KNNIndex.cpp  org_opensearch_knn_jni_FaissService.cpp  org_opensearch_knn_jni_JNICommons.cpp  org_opensearch_knn_jni_NmslibService.cpp  org_opensearch_knn_jni_SIMDDecoding.cpp  org_opensearch_knn_jni_SIMDEncoding.cpp  org_opensearch_knn_jni_SIMDNativeLibraryLoader.cpp  org_opensearch_knn_jni_SimdFp16.cpp  org_opensearch_knn_jni_SimdVectorComputeService.cpp  simd_fp16.cpp  x86_simd_fp16.cpp
jni/src/decoding/: arm_decoding.cpp  decoding.cpp  default_decoding.cpp  x86_decoding.cpp
jni/src/encoding/: arm_encoding.cpp  default_encoding.cpp  encoding.cpp  x86_encoding.cpp
jni/src/knn_extension/faiss/: MultiVectorResultCollector.cpp  MultiVectorResultCollectorFactory.cpp
jni/src/simd/similarity_function/: arm_neon_simd_similarity_function.cpp  arm_simd_similarity_function.cpp  avx512_simd_similarity_function.cpp  avx512_spr_simd_similarity_function.cpp  default_simd_similarity_function.cpp  (+5 more)
jni/tests/: commons_test.cpp  faiss_bbq_distance_computer_test.cpp  faiss_index_bq_unit_test.cpp  faiss_index_service_test.cpp  faiss_memory_test.cpp  faiss_sq_distance_computer_test.cpp  faiss_stream_support_test.cpp  faiss_util_test.cpp  faiss_wrapper_test.cpp  faiss_wrapper_unit_test.cpp  jni_test.cpp  memory_test.cpp  mock_jni.cpp  mock_jni.h  native_stream_support_util.h  nmslib_stream_support_test.cpp  nmslib_wrapper_test.cpp  nmslib_wrapper_unit_test.cpp  test_util.cpp  test_util.h
jni/tests/mocks/: faiss_index_mock.h  faiss_index_service_mock.h  faiss_methods_mock.h
jni/tmp/: .gitignore
(+2203 files in other folders)
